Alignment fixed

--- a/style.css
+++ b/style.css
@@ -1,19 +1,18 @@
 html{
-    width: 100%;
     height: 100%;
 }
 body{
-    border: 8px groove greenyellow;
+    border: 12px groove greenyellow;
     margin: 0px;
     padding: 0px;
-    background-image: url(https://images.unsplash.com/photo-1594970351817-5eb9a5728fa0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8NHx8fGVufDB8fHx8&w=1000&q=80);
-    background-size: 100%;
-    background-position: center;
-    width: 100%;
+    background-image: url(https://images.unsplash.com/photo-1454496522488-7a8e488e8606?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=876&q=80);
+    background-size: cover;
+    background-attachment: fixed;
+    width: fit-content;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 #Container1{
-    width: 100%;
+    width: 95%;
     height: 150px;
     margin-top: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,7 +47,7 @@ body{
     color: floralwhite;
 }
 .Box3{
-    width: 30%;
+    width: 34%;
     height: fit-content;
     top: 5%;
     left: 60%;
@@ -62,10 +61,10 @@ body{
 .Circle{
     width: 32%;
     height: 380px;
-    border: 10px double #3d2020;
+    border: 10px  double black;
     border-radius: 50%;
-    background-color: darkslategrey;
-    color: antiquewhite;
+    background-color: #F9B208;
+    color: #334443;
     font-style: oblique;
     position: relative;
     text-align: center;
@@ -85,14 +84,14 @@ body{
     margin-top: 15%;
 }
 .Form{
-    border: 5px dashed maroon;
+    border: 8px dashed maroon;
     background-color: thistle;
     width: 28%;
     height: 500px;
     text-align: center;
     position: absolute;
     top: 28vh;
-    right: 10%;
+    right: 18%;
 }
 #Menu{
     width: 30vw;
@@ -117,28 +116,28 @@ body{
     display: flex;
     flex-wrap: wrap;
     text-align: center;
+    justify-content: space-around;
     margin-top: 260px;
     top: 200vh;
+    right: 200px;
 }
 .Card{
     border: 4px double darkblue;
-    height: 300px;
-    width: 305px;
-    margin: 60px;
+    height: 270px;
+    width: 270px;
+    margin: 35px;
     color: black;
     background-color: #00FFDD;
     border-radius: 40px;
-    justify-content: space-around;
 }
 .Card2{
     border: 4px double darkblue;
-    height: 320px;
-    width: 308px;
-    margin: 60px;
+    height: 270px;
+    width: 290px;
+    margin: 35px;
     color: black;
     background-color: #00FFDD;
     border-radius: 40px;
-    justify-content: space-around;
 }
 .Type{
     text-align: center;
